# RoboMasterPy

./: .gitignore  LICENSE  README.md  __init__.py  client.py  data.py  feed.py  push_receiver.py  pyproject.toml
.github/workflows/: publish-docs.yml  publish-python.yml  python-publish.yml
md_docs/: faq.md  how_to.md
src/sbhs_robomaster/: __init__.py  auto_connect.py  client.py  data.py  dropping_async_enumerable.py  dropping_feed.py  feed.py  push_receiver.py
tests/: test.py
