[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbhs_robomaster"
version = "0.0.16"
authors = [
  { name="AP2", email="professor_smart@hotmail.com" },
]
description = "A simple python package to control the DJI RoboMaster EP2"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AndrewPerson/RoboMasterPy"
"Bug Tracker" = "https://github.com/AndrewPerson/RoboMasterPy/issues"